# baldly

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  tests.yml
src/baldly/: widget.py
tests/: test_widget.py
