[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baldly"
version = "0.0.1"
authors = [
    {name = "James Hoctor", email = "jehoctor@protonmail.com"}
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
